# AutoDiff

./: .drone.yml  .gitattributes  .gitignore  AutoDiff.ipynb  CMakeLists.txt  build_emsdk.sh  compile_commands.json  cpu.cpp  cpu.h  main.cpp  tape.cpp  tape.h  variable.h
patches/: real_mul_div.patch  real_powx_acc.patch  real_sqr.patch
python/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  blas.hpp  config.h.in  cpu.hpp  main.cpp  tape.cpp  tape.hpp  variable.hpp
src/exe/: main.cpp
src/helpers/: forward.hpp  operations.hpp  type_traits.hpp
src/ops/: cpu.cpp  cpu.hpp  ops.hpp
src/optimizer/: optimizer.cpp  optimizer.hpp
src/pool/: memory_pool.cpp  memory_pool.hpp
src/tape/: tape.cpp  tape.hpp
src/variable/: blas.hpp  blas_i.hpp  cpu.cpp  cpu.hpp  shape.cpp  shape.hpp  variable.cpp  variable.hpp
tests/: CMakeLists.txt
tests/test_tape/: tape.test  tape.test_double.cpp  tape.test_float.cpp
tests/test_variable/: variable.cpp  variable.test  variable.test_double.cpp  variable.test_float.cpp
